# learnrust

julia-kf/: Manifest.toml  Project.toml  data.csv  simulation.jl
kalmanfilters/: Cargo.toml
kalmanfilters/src/: lib.rs  main.rs  vanillafilter.rs
kalmanfilters/tests/: kf_tests1.rs
