[package]
name = "kalmanfilters"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["from", "add","display"]}
nalgebra = { version="0.33.2",features = ["serde-serialize"] }
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
rstest = "0.23.0"
serde = "1.0.217"
